structmeta-tests/tests/compile_fail/struct_meta/expected_name_args_buf_flag.stderr
error: cannot find parameter `value` in this scope
 --> $DIR/expected_name_args_buf_flag.rs:1:45
  |
1 | #[structmeta_tests::attr_required_name_args(value)]
  |                                             ^^^^^
